--- a/theme/snippets/jumplink-shopping-cart-dropdown.liquid
+++ b/theme/snippets/jumplink-shopping-cart-dropdown.liquid
@@ -17,7 +17,8 @@
       aria-haspopup="true"
       aria-expanded="false"
     >
-      Shopping Bag <small class="ml-1 cart-item-count text-center" rv-text="cart.item_count"></small>
+      <span rv-i18n-text="'menus.cart'">{{'menus.cart'|t}}</span>
+      <small class="ml-1 cart-item-count text-center" rv-text="cart.item_count"></small>
     </a>
     
     <div class="dropdown-menu p-3 scrollbar-primary " aria-labelledby="dropdownMenuCart">
