--- a/theme/templates/cart.liquid
+++ b/theme/templates/cart.liquid
@@ -11,7 +11,7 @@
 
       <p class="my-3">
         <button class="btn btn-link px-0" rv-route-back-on-click >
-          <small>Continue Shopping</small>
+          <small rv-i18n-text="'cart.continue'">{{'cart.continue'|t}}</small>
         </button>
       </p>
 
