--- a/src/ts/components/shopify-linklist/shopify-linklist.component.html
+++ b/src/ts/components/shopify-linklist/shopify-linklist.component.html
@@ -1,8 +1,24 @@
 <nav class="nav" rv-class="linklist.handle" rv-class-nav-pills="pills" rv-class-flex-column="vertical" rv-class-flex-row="vertical | not">
   <div class="nav-item" rv-each-link="linklist.links">
-    <a class="nav-link" rv-class-active="link.active" rv-parent-route-class-active="link.url" rv-route="link.url" rv-href="link.url">{link.title}</a>
+    <a
+      class="nav-link"
+      rv-class-active="link.active"
+      rv-parent-route-class-active="link.url"
+      rv-route="link.url"
+      rv-href="link.url"
+      >
+      <span rv-i18n-text="link.title | handleize | prepend 'menus.'"></span>
+    </a>
     <div class="nav-item" rv-each-sublink="link.links">
-      <a class="nav-link" rv-class-active="sublink.active" rv-route-class-active="link.url" rv-route="sublink.url" rv-href="sublink.url">{sublink.title}</a>
+      <a
+        class="nav-link"
+        rv-class-active="sublink.active"
+        rv-route-class-active="link.url"
+        rv-route="sublink.url"
+        rv-href="sublink.url"
+      >
+      <span rv-i18n-text="sublink.title | handleize | prepend 'menus.'"></span>
+    </a>
     </div>
   </div>
 </nav>
