--- a/theme/sections/instagram-scrollbar.liquid
+++ b/theme/sections/instagram-scrollbar.liquid
@@ -1,7 +1,12 @@
 <rv-instagram-scrollbar instagram-id="{{section.settings.instagram_id}}" open-links="{{section.settings.open-links}}" limit="{{section.settings.limit}}" open-url="{{section.settings.open-url}}" class="d-block container-fluid">
-  <div class="row title-row scrollbar-invisible scrollbar-x-auto scrollbar-y-hidden">
-    <div class="col-auto title-col text-nowrap" rv-show="media.data | size | gt 0" style="padding-right: 16%; padding-left: 16%; background-color: #4D3A40; color: #D9998F;">
-      #FASSBENDER HIGHLIGHTS
+  <div class="row title-row scrollbar-invisible scrollbar-x-hidden scrollbar-y-hidden">
+    <div
+      class="col-auto title-col text-nowrap"
+      rv-show="media.data | size | gt 0"
+      style="padding-right: 16%; padding-left: 16%; background-color: #4D3A40; color: #D9998F;"
+      rv-i18n-text="'sections.instagram-scrollbar.title'"
+    >
+      {{'title'|t}}
     </div>
   </div>
   <div class="row flex-nowrap scrollbar-invisible scrollbar-x-auto" rv-scrollbar-dragable="" rv-on-scroll="onScroll">
@@ -60,6 +65,14 @@
         "name": "Instagram Scrollbar",
         "blocks": []
       }
-    ]
+    ],
+    "locales": {
+      "en": {
+        "title": "#FASSBENDER HIGHLIGHTS"
+      },
+      "de": {
+        "title": "#FASSBENDER HIGHLIGHTS"
+      }
+    }
   }
 {% endschema %}
