--- a/theme/sections/one-storie.liquid
+++ b/theme/sections/one-storie.liquid
@@ -60,7 +60,7 @@
 
       {% if video != blank %}
         {% if videoType == 'youtube' %}
-          <div class="col px-0 content-box {{contentBoxClass}}">
+          <div class="col px-0 content-box fit-initial {{contentBoxClass}}">
             <iframe
               lazyload="on"
               class="{{imageClass}}"
@@ -77,7 +77,7 @@
               </iframe>
           </div>
         {% elsif videoType == 'vimeo' %}
-          <div class="col px-0 content-box ratio-16-9">
+          <div class="col px-0 content-box fit-initial ratio-16-9">
             <iframe
               lazyload="on"
               class="{{imageClass}}"
@@ -96,7 +96,9 @@
           <div class="col px-0 content-box {{contentBoxClass}}">
             <video class="{{imageClass}}" autoplay muted loop>
               <source src="{{video}}" type="video/mp4">
-              Your browser does not support the video tag or mp4.
+              <span rv-i18n-text="'system.video_tag_not_supported'">
+                {{'system.video_tag_not_supported'|t}}
+              </span>
             </video>
           </div>
         {% endif %}
