--- a/theme/snippets/jumplink-form-inputs-customer-recover.liquid
+++ b/theme/snippets/jumplink-form-inputs-customer-recover.liquid
@@ -1,11 +1,16 @@
 <div class="form-group mb-0">
-  <label for="{{idPrefix}}recover_customer_email" class="sr-only">Email Address</label>
+  <label for="{{idPrefix}}recover_customer_email" class="sr-only"
+    rv-i18n-text="'forms.login.mail'"
+  >
+    {{'forms.login.mail'|t}}
+  </label>
   <input
     type="email"
     name="email"
     class="form-control form-control-text form-control-primary py-1"
     id="{{idPrefix}}recover_customer_email"
-    placeholder="Email"
+    placeholder="{{'forms.login.mail'|t}}"
+    rv-i18n-placeholder="'forms.login.mail'"
     required
     autocorrect="off"
     autocapitalize="off"
@@ -14,7 +19,9 @@
     autocomplete="username"
     rv-value="form.customer.email"
   />
-  <div class="invalid-feedback">
-    Please check your entry
+  <div class="invalid-feedback"
+    rv-i18n-text="'forms.invalid.any'"
+  >
+    {{'forms.invalid.any'|t}}
   </div>
 </div>
