--- a/theme/snippets/jumplink-shopping-cart-body.liquid
+++ b/theme/snippets/jumplink-shopping-cart-body.liquid
@@ -15,7 +15,7 @@
             <div class="row">
               <div class="col-auto d-flex flex-column justify-content-center">
                 <strong>
-                  Estimated Shipping
+                  <span rv-i18n-text="'cart.estimated_shipping'">{{'cart.estimated_shipping'|t}}</span>
                 </strong>
               </div>
               <div rv-each-shipping="shippingRates" class="col-12 d-flex flex-column justify-content-center">
@@ -30,23 +30,32 @@
       {% comment %} Total price an buy button {% endcomment %}
       <div class="row" rv-hide="cart.item_count | eq 0">
         <div class="col-auto d-flex flex-column justify-content-center">
-          <strong>
-            <span rv-text="cart.item_count"></span>
-            Items
+          <strong rv-i18n-text="'cart.items'" rv-data-count="cart.item_count">
           </strong>
           <p class="my-0" rv-text="cart.total_price | money '{{ shop.money_format }}'"></p>
-          <p class="mb-0 mt-1">Free Shipping<br><small>to all countries in th EU</small></p>
+          <p class="mb-0 mt-1" rv-i18n-html="'cart.info_html'">
+            {{'cart.info_html'|t}}
+          </p>
         </div>
 
         <div class="col d-flex flex-column align-items-end justify-content-center">
-          <button type="submit" name="checkout" class="btn btn-animated-underline-dark font-weight-bold">Buy</button>
+          <button
+            type="submit"
+            name="checkout"
+            class="btn btn-animated-underline-dark font-weight-bold"
+            rv-i18n-text="'cart.buy'"
+            >
+            {{'cart.buy'|t}}
+          </button>
         </div>
       </div>
 
       {% if showCartPageLink %}
         <p class="mb-0 mt-3">
           <strong rv-on-click="closeDropdowns">
-            <a class="text-normal" rv-route="'/cart'" rv-route-class-active="'/cart'" href="/cart">View Shopping Bag</a>
+            <a class="text-normal" rv-route="'/cart'" rv-route-class-active="'/cart'" href="/cart">
+              <span rv-i18n-text="'cart.view'">{{'cart.view'|t}}</span>
+            </a>
           </strong>
         </p>
       {% endif %}
@@ -56,7 +65,7 @@
     <div rv-show="cart.item_count | eq 0">
       <div class="row" rv-show="cart.item_count | eq 0">
         <div class="col-auto">
-          <strong>No Items yet</strong>
+          <strong rv-i18n-text="'cart.items.zero'">{{'cart.items.zero'|t}}</strong>
         </div>
       </div>
     </div>
